hphp/test/zend/good/Zend/tests/closure_005.php.expectf
3
3
5
5
7
7

Fatal error: $this is null in %s/closure_005.php on line 24
